welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
            while (isFacingTrail()) {avance();baisseBrosse();leveBrosse()};gauche() } prendBiscuit()
                                                                                      ^